--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   </a>
   <form class="contact-form">
     <input type="text" placeholder="Your Name">
-    <input type="email" placeholder="Your Email">
+    <input type="email" placeholder="mdtauseefraja@gmail.com">
     <textarea rows="5" placeholder="Your Message"></textarea>
     <button class="btn">Send Message</button>
   </form>
