--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 
   <!-- Google Font -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+
 
   <link rel="stylesheet" href="style.css">
 </head>
@@ -25,7 +27,7 @@
     </div>
   </nav>
 </header>
-
+<br>
 <section class="hero" id="home">
   <div class="hero-text">
     <h1>Hi, I'm <span>Md Tauseef Raja</span></h1>
@@ -42,9 +44,16 @@
   <h2>About Me</h2>
   <div class="about-content">
     <p>
-      I am a passionate Frontend Developer with 1 year of experience.
-      I specialize in creating clean UI designs, modern animations,
-      and responsive websites using HTML, CSS, and JavaScript.
+      I am a passionate Frontend Developer with 1+ year of professional experience in building
+modern, responsive, and user-friendly web interfaces. I specialize in HTML, CSS, and
+JavaScript, focusing on clean code, pixel-perfect UI, and mobile-first design.
+
+I have strong expertise in creating fast-loading, SEO-friendly websites with smooth
+animations and cross-browser compatibility. I enjoy transforming business ideas into
+scalable digital experiences that improve user engagement and conversion rates.
+
+I am detail-oriented, deadline-driven, and always eager to learn new technologies to
+deliver high-quality results for clients and organizations.
     </p>
   </div>
 </section>
@@ -102,6 +111,20 @@
     <input type="email" placeholder="Your Email">
     <textarea rows="5" placeholder="Your Message"></textarea>
     <button class="btn">Send Message</button>
+    <div class="social-links">
+  <a href="mailto:mdtauseefraja@gmail.com">
+    <i class="fas fa-envelope"></i>
+  </a>
+  <a href="https://www.linkedin.com/in/md-tauseef-raja-5b8151160/" target="_blank">
+    <i class="fab fa-linkedin-in"></i>
+  </a>
+  <a href="https://x.com/ezycode101" target="_blank">
+    <i class="fab fa-x-twitter"></i>
+  </a>
+  <a href="https://wa.me/917210905804" target="_blank">
+    <i class="fab fa-whatsapp"></i>
+</div>
+
   </form>
 </section>
 
@@ -109,8 +132,7 @@
   <p>© 2025 Md Tauseef Raja | Frontend Developer</p>
 </footer>
 
-<script scr="script.js"></script>
+<script src="script.js"></script>
 
 </body>
-
 </html>
