--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <br>
 <section class="hero" id="home">
   <div class="hero-text">
-    <h1>Hi, I'm <span>Md Tauseef Raja</span></h1>
+    <h1 class="hero-text1">Hi, I'm <span id="Md Tauseef Raja" ></span></h1>
     <p>Frontend Developer with 1 year of experience building responsive, modern, and user-friendly web interfaces.</p>
     <div class="btn-group">
       <a class="btn" href="#contact">Hire Me</a>
